--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Roboto:wght@300;400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -79,7 +79,7 @@
 
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container">
-                    <img src="./img/logo_menu.png" alt="logo" width="194" height="48"
+                    <img src="./img/logo_menu.webp" alt="logo" width="194" height="48"
                         class="d-inline-block align-text-top">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>ПРО КОМПАНІЮ</h1>
+                    <h1 class="green text-center">ПРО КОМПАНІЮ</h1>
                     <p>
                         Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
                         здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
@@ -198,52 +198,6 @@
         </div>
     </section>
 
-    <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
-
-    <!-- <section class="icons">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card text-center">
-                        <img src="/img/chashka.png" class="card-img-top" alt="icon">
-                        <div class="card-body">
-                            <p class="card-text">Наша кава виготовлена на ультрасучасних кавових фабриках Італії та
-                                Голандії (ICS) із застосуванням найкращого обладнання та професійних знань
-                                висококлассних світових спеціалістів. Богатство смаку і аромату, відбірні зерна і
-                                ідеально відточені рецепти блендів - основні відмінні особливості нової лінійки кави
-                                Bianchi</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card text-center">
-                        <img src="./img/kofe zel.png" class="card-img-top" alt="icon">
-                        <div class="card-body">
-                            <p class="card-text">Ми пропонуємо весь модельний ряд кавових машин для приготування кави
-                                від провідних виробників Європи: WMF (Німеччина), Bianchi (Італія), Carimali (Італія),
-                                Franke (Швейцарія), починая від простих кавомашин до суперавтоматів. Напої, виготовлені
-                                на цьому обладнанні, мають неповторний смак і високу якість, які підтверджують
-                                авторитетні спеціалісти кавової галузі.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="card text-center">
-                        <img src="./img/servis_salat.png" class="card-img-top" alt="icon">
-                        <div class="card-body">
-                            <p class="card-text">Наші менеджери пропонують індивідуальні умови співпраці для кожного
-                                клієнта. Своєчасна доставка продуктів і якісне сервісне обслуговування обладнання
-                                вигідно відрізняють нас на ринку кавових послуг. Ми робимо обслуговування обладнання у
-                                власних сервісних центрах.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
     <section class="images mb-5">
@@ -251,21 +205,21 @@
             <div class="row">
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="#"><img src="./img/index/horeca.jpg" class="card-img-top" alt="horeca"></a>
+                        <a href="#"><img src="./img/index/horeca.webp" class="card-img-top" alt="horeca"></a>
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <img src="./img/index/classic.jpg" class="card-img-top" alt="ckassic">
+                        <img src="./img/index/classic.webp" class="card-img-top" alt="classic">
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <img src="./img/index/vending.jpg" class="card-img-top" alt="vending">
+                        <img src="./img/index/vending.webp" class="card-img-top" alt="vending">
                         <div class="bottom-left">ВЕНДІНГ</div>
                     </div>
                 </div>
@@ -278,11 +232,11 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img src="./img/index/cap.png" alt="cap">
+                    <img src="./img/index/cap.webp" alt="cap">
                 </div>
                 <div class="col">
                     <form class="needs-validation" novalidate>
-                        <h4>Безкоштовна консультація нашого спеціаліста</h4>
+                        <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
                         <div class="mb-3">
                             <input type="text" name="userName" class="form-control" id="validationName"
                                 placeholder="Ваше Ім'я" minlength="2" required>
@@ -325,7 +279,7 @@
                 <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>INSTAGRAM</h3>
-                        <img src="./img/index/instagram.png" alt="logo_instagram">
+                        <img src="./img/index/instagram.webp" alt="logo_instagram">
                         <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
                             class="btn btn-instagram">ПІДПИСАТИСЯ</a>
                     </div>
@@ -333,7 +287,7 @@
                 <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>FACEBOOK</h3>
-                        <img src="./img/index/facebook.png" alt="logo_facebook">
+                        <img src="./img/index/facebook.webp" alt="logo_facebook">
                         <a target="_blank" href="https://facebook.com/bianchiprofessional"
                             class="btn btn-facebook">ПІДПИСАТИСЯ</a>
                     </div>
@@ -341,7 +295,7 @@
                 <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>TELEGRAM</h3>
-                        <img src="./img/index/telegram.png" alt="logo_telegram">
+                        <img src="./img/index/telegram.webp" alt="logo_telegram">
                         <a target="_blank" href="https://t.me/bianchi_prof" class="btn btn-telegram">ПІДПИСАТИСЯ</a>
                     </div>
                 </div>
@@ -359,22 +313,22 @@
             <div class="row g-0">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner1-1.png" alt="partner">
+                        <img src="./img/index/partner1-1.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner1-2.png" alt="partner">
+                        <img src="./img/index/partner1-2.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner2-1.png" alt="partner">
+                        <img src="./img/index/partner2-1.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner2-2.png" alt="partner">
+                        <img src="./img/index/partner2-2.webp" alt="partner">
                     </div>
                 </div>
             </div>
@@ -382,22 +336,22 @@
             <div class="row g-0">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner3-1.png" alt="partner">
+                        <img src="./img/index/partner3-1.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner3-2.png" alt="partner">
+                        <img src="./img/index/partner3-2.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner4-1.png" alt="partner">
+                        <img src="./img/index/partner4-1.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner4-2.png" alt="partner">
+                        <img src="./img/index/partner4-2.webp" alt="partner">
                     </div>
                 </div>
             </div>
@@ -405,22 +359,22 @@
             <div class="row">
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner5-1.png" alt="partner">
+                        <img src="./img/index/partner5-1.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner5-2.png" alt="partner">
+                        <img src="./img/index/partner5-2.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner5-3.png" alt="partner">
+                        <img src="./img/index/partner5-3.webp" alt="partner">
                     </div>
                 </div>
                 <div class="col">
                     <div class="partner">
-                        <img src="./img/index/partner5-4.png" alt="partner">
+                        <img src="./img/index/partner5-4.webp" alt="partner">
                     </div>
                 </div>
             </div>
