--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
+
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
+
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
@@ -157,12 +159,12 @@
     </div>
 
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="banner">
-        <div class="container">
-            <a><img src="./img/dlya_magazinov_i_setey/baner.webp" class="img-fluid" alt="banner"></a>
-        </div>
-    </div>
 
+    <section class="banner">
+        <div class="container">
+            <a><img src="/img/dlya_magazinov_i_setey/banner.webp" class="img-fluid" alt="banner"></a>
+        </div>
+    </section>
 
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
 
@@ -211,7 +213,7 @@
 
     <div class="container hr-line"></div>
 
-    
+    <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
 
     <div class="container">
         <div class="row">
@@ -308,7 +310,6 @@
         </div>
     </div>
 
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
     <footer class="footer">
@@ -392,7 +393,6 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
 
     <!-- /////////////////////////////////////modal///////////////////////////// -->
 
