--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="row">
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="#"><img src="./img/index/horeca.webp" class="card-img-top" alt="horeca"></a>
+                        <a href="/dlya_magazinov_i_setey.html"><img src="./img/index/horeca.webp" class="card-img-top" alt="horeca"></a>
                         <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                     </div>
                 </div>
