--- a/dlya_magazinov_i_setey.html
+++ b/dlya_magazinov_i_setey.html
@@ -77,82 +77,81 @@
                 </div>
             </div>
         </div>
-        <div class="header__bottom">
-
-            <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container">
-                    <img src="./img/logo_menu.webp" alt="logo" width="194" height="48"
-                        class="d-inline-block align-text-top">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
-                            </li>
-
-                            <div class="btn-group">
-                                <li class="nav-item">
-                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false" href="#">
-                                        НАПРЯМКИ
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" type="button" href="#">Для магазинів та
-                                                торгівельних мереж</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Для кафе, ресторанів,
-                                                офісів</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Вендінг</a></li>
-                                    </ul>
-                                </li>
-                            </div>
-
-                            <div class="btn-group">
-                                <div class="nav-item">
-                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false" href="#">
-                                        ОБЛАДНАННЯ
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" type="button" href="#">Автомати, суперавтомати</a>
-                                        </li>
-                                        <li><a class="dropdown-item" type="button" href="#">Класичні постові
-                                                кавомашини</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Кавомолки професійні</a>
-                                        </li>
-                                        <li><a class="dropdown-item" type="button" href="#">Вендінгові апарати</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="btn-group">
-                                <div class="nav-item">
-                                    <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
-                                        aria-expanded="false" href="#">
-                                        ТОВАРИ
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" type="button" href="#">Зернова кава</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Капучино, шоколад,
-                                                молоко</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Сиропи</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Чай</a></li>
-                                        <li><a class="dropdown-item" type="button" href="#">Стакани, цукор</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <li class="nav-item">
-                                <a class="btn text-nowrap" role="button" href="#">КОНТАКТИ</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
     </header>
+
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <img src="./img/logo_menu.webp" alt="logo" width="194" height="48" class="d-inline-block align-text-top">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
+                    </li>
+
+                    <div class="btn-group">
+                        <li class="nav-item">
+                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                                href="#">
+                                НАПРЯМКИ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" type="button" href="/dlya_magazinov_i_setey.html">Для
+                                        магазинів та
+                                        торгівельних мереж</a></li>
+                                <li><a class="dropdown-item" type="button" href="/dlya_cafe_restoranov.html">Для кафе,
+                                        ресторанів,
+                                        офісів</a></li>
+                                <li><a class="dropdown-item" type="button" href="/vending.html">Вендінг</a></li>
+                            </ul>
+                        </li>
+                    </div>
+
+                    <div class="btn-group">
+                        <div class="nav-item">
+                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                                href="#">
+                                ОБЛАДНАННЯ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" type="button" href="#">Автомати, суперавтомати</a>
+                                </li>
+                                <li><a class="dropdown-item" type="button" href="#">Класичні постові
+                                        кавомашини</a></li>
+                                <li><a class="dropdown-item" type="button" href="#">Кавомолки професійні</a>
+                                </li>
+                                <li><a class="dropdown-item" type="button" href="#">Вендінгові апарати</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="btn-group">
+                        <div class="nav-item">
+                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                                href="#">
+                                ТОВАРИ
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" type="button" href="#">Зернова кава</a></li>
+                                <li><a class="dropdown-item" type="button" href="#">Капучино, шоколад,
+                                        молоко</a></li>
+                                <li><a class="dropdown-item" type="button" href="#">Сиропи</a></li>
+                                <li><a class="dropdown-item" type="button" href="#">Чай</a></li>
+                                <li><a class="dropdown-item" type="button" href="#">Стакани, цукор</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <li class="nav-item">
+                        <a class="btn text-nowrap" role="button" href="#">КОНТАКТИ</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="separator">
         <h3>Для магазинів і торгівельних мереж</h3>
@@ -232,7 +231,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container magazine">
         <div class="row">
             <div class="col-lg-6">
                 <div class="p-4">
@@ -257,7 +256,7 @@
         <h3>Що потрібно для співпраці</h3>
     </div>
 
-    <div class="container">
+    <div class="container timeline">
         <div class="row">
             <div class="col">
                 <div class="timeline-steps aos-init aos-animate" data-aos="fade-up">
@@ -309,6 +308,54 @@
             </div>
         </div>
     </div>
+
+    <div class="container hr-line"></div>
+
+    <!-- /////////////////////////////////////////   CoffeMashineGallery    //////////////////////////////////////// -->
+
+    <section class="gallery">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/franke.webp" class="p-3 img-fluid" alt="franke fm-800"></a>
+                        <p>Franke FM-800</p>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/GaiaStyle.webp" class="p-3 img-fluid" alt="Bianchi Gaia Style"></a>
+                        <p>Bianchi Gaia Style</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/wmf.webp" class="p-3 img-fluid" alt="WMF 1500S"></a>
+                        <p>WMF 1500 S</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/GaiaTouch.webp" class="p-3 img-fluid" alt="Bianchi Gaia Touch"></a>
+                        <p>Bianchi Gaia Touch</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/carimali.webp" class="p-3 img-fluid" alt="Carimali BlueDot"></a>
+                        <p>Franke FM-800</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <a><img src="/img/dlya_magazinov_i_setey/TaliaTouch.webp" class="p-3 img-fluid" alt="Bianchi Talia Touch"></a>
+                        <p>Bianchi Talia Touch</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
@@ -446,9 +493,9 @@
         </div>
     </div>
 
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/boundle.js"></script>
+    <script src="/js/bundle.js"></script>
 </body>
 
 </html>
