--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
             <div class="modal-content">
                 <form novalidate>
                     <div class="modal-header">
-                        <h4 class="modal-title" id="exampleModalLabel">Безкоштовна консультація нашого спеціаліста</h4>
+                        <h4 class="modal-title green text-center" id="exampleModalLabel">Безкоштовна консультація нашого спеціаліста</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                     </div>
                     <div class="modal-body">
