--- a/index.html
+++ b/index.html
@@ -27,43 +27,59 @@
 
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap" href="tel:+380960542770">ХАРКІВ (096) 054-27-70</li>
-                            <a class="telephone text-nowrap" href="tel:+380935475572">(093) 547-55-72</a>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380960542770">ХАРКІВ (096) 054-27-70</a>
+                            </li>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
+                            </li>
+
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
-                            <a class="telephone text-nowrap" href="tel:+380660227720">(066) 022-77-20</a>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380660227720">(066) 022-77-20</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-                            <a class="telephone text-nowrap" href="tel:+380989700921">(098) 970-09-21</a>
+
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
-                            <a class="telephone text-nowrap" href="tel:+380504400492">(050) 440-04-92</a>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380504400492">(050) 440-04-92</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
-                            <a class="telephone text-nowrap" href="tel:+380989700929">(098) 970-09-29</a>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone text-nowrap" href="tel:+380989700929">(098) 970-09-29</a>
+                            </li>
                         </ul>
                     </div>
 
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
-                            <a class="telephone text-nowrap" href="tel:+380950252822">(095) 025-28-22</a>
+                            <li class="telephone text-nowrap">
+                                <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -77,7 +93,7 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <img src="./img/logo_menu.webp" alt="logo" width="194" height="48" class="d-inline-block align-text-top">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -90,60 +106,67 @@
                         <a class="btn text-nowrap" role="button" href="/index.html">ПРО НАС</a>
                     </li>
 
-                    <div class="btn-group">
-                        <li class="nav-item">
-                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
-                                href="#">
-                                НАПРЯМКИ
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" type="button" href="/dlya_magazinov_i_setey.html">Для
-                                        магазинів та
-                                        торгівельних мереж</a></li>
-                                <li><a class="dropdown-item" type="button" href="/dlya_cafe_restoranov.html">Для кафе,
-                                        ресторанів,
-                                        офісів</a></li>
-                                <li><a class="dropdown-item" type="button" href="/vending.html">Вендінг</a></li>
-                            </ul>
-                        </li>
-                    </div>
-
-                    <div class="btn-group">
-                        <div class="nav-item">
-                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
-                                href="#">
-                                ОБЛАДНАННЯ
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" type="button" href="#">Автомати, суперавтомати</a>
-                                </li>
-                                <li><a class="dropdown-item" type="button" href="#">Класичні постові
-                                        кавомашини</a></li>
-                                <li><a class="dropdown-item" type="button" href="#">Кавомолки професійні</a>
-                                </li>
-                                <li><a class="dropdown-item" type="button" href="#">Вендінгові апарати</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="btn-group">
-                        <div class="nav-item">
-                            <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
-                                href="#">
-                                ТОВАРИ
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" type="button" href="#">Зернова кава</a></li>
-                                <li><a class="dropdown-item" type="button" href="#">Капучино, шоколад,
-                                        молоко</a></li>
-                                <li><a class="dropdown-item" type="button" href="#">Сиропи</a></li>
-                                <li><a class="dropdown-item" type="button" href="#">Чай</a></li>
-                                <li><a class="dropdown-item" type="button" href="#">Стакани, цукор</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    <li class="nav-item">
+                        <ul class="btn-group">
+                            <li class="nav-item">
+                                <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
+                                    aria-expanded="false" href="#">
+                                    НАПРЯМКИ
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/dlya_magazinov_i_setey.html">Для
+                                            магазинів та
+                                            торгівельних мереж</a></li>
+                                    <li><a class="dropdown-item" href="/dlya_cafe_restoranov.html">Для
+                                            кафе,
+                                            ресторанів,
+                                            офісів</a></li>
+                                    <li><a class="dropdown-item" href="/vending.html">Вендінг</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
 
                     <li class="nav-item">
+                        <ul class="btn-group">
+                            <li class="nav-item">
+                                <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown"
+                                    aria-expanded="false" href="#">
+                                    ОБЛАДНАННЯ
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Автомати, суперавтомати</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Класичні постові
+                                            кавомашини</a></li>
+                                    <li><a class="dropdown-item" href="#">Кавомолки професійні</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">Вендінгові апарати</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item">
+                        <ul class="btn-group">
+                            <li class="nav-item">
+                                <a class="btn text-nowrap dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                                    href="#">
+                                    ТОВАРИ
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="#">Капучино, шоколад,
+                                            молоко</a></li>
+                                    <li><a class="dropdown-item" href="#">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="#">Чай</a></li>
+                                    <li><a class="dropdown-item" href="#">Стакани, цукор</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+
+                <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="#">КОНТАКТИ</a>
                     </li>
                 </ul>
@@ -197,7 +220,7 @@
 
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
-    <section class="images mb-5">
+    <div class="images mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 p-1">
@@ -223,10 +246,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
-    <section class="consultation mb-4">
+    <div class="consultation mb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -252,7 +275,9 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <select name="city" class="form-select validationCity" id="validationCity" required>
+                            <input type="text" name="city" class="form-control validationCity" id="validationCity"
+                                placeholder="Ваше місто..." required>
+                            <!-- <select name="city" class="form-select validationCity" id="validationCity" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
                                 <option>Київ</option>
@@ -261,14 +286,14 @@
                                 <option>Біла Церква</option>
                                 <option>Черкаси</option>
                                 <option>Інше місто</option>
-                            </select>
+                            </select> -->
                         </div>
                         <button name="sendRequest" class="btn send-request">Залишити заявку</button>
                     </form>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
     <section class="socialnet mb-4">
@@ -306,7 +331,7 @@
         <h3>НАШІ ПАРТНЕРИ</h3>
     </div>
 
-    <section class="partners mb-4">
+    <div class="partners mb-4">
         <div class="container text-center">
             <div class="row g-0">
                 <div class="col">
@@ -377,7 +402,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
 
@@ -490,7 +515,9 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" name="cityModal" id="validationCityModal" required>
+                            <input type="text" name="cityModal" class="form-control" id="validationCityModal"
+                                placeholder="Ваше місто..." required>
+                            <!-- <select class="form-select" name="cityModal" id="validationCityModal" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
                                 <option>Київ</option>
@@ -499,7 +526,7 @@
                                 <option>Біла Церква</option>
                                 <option>Черкаси</option>
                                 <option>Інше місто</option>
-                            </select>
+                            </select> -->
                         </div>
                     </div>
 
