--- a/dlya_cafe_restoranov.html
+++ b/dlya_cafe_restoranov.html
@@ -137,13 +137,13 @@
                                     ОБЛАДНАННЯ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Автомати, суперавтомати</a>
+                                    <li><a class="dropdown-item" href="/avtomaty.html">Автомати, суперавтомати</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Класичні постові
+                                    <li><a class="dropdown-item" href="/postovie.html">Класичні постові
                                             кавомашини</a></li>
-                                    <li><a class="dropdown-item" href="#">Кавомолки професійні</a>
+                                    <li><a class="dropdown-item" href="/kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Вендінгові апарати</a></li>
+                                    <li><a class="dropdown-item" href="/vending_avtomaty.html">Вендінгові апарати</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -157,19 +157,19 @@
                                     ТОВАРИ
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Зернова кава</a></li>
-                                    <li><a class="dropdown-item" href="#">Капучино, шоколад,
+                                    <li><a class="dropdown-item" href="/zernovoy_kofe.html">Зернова кава</a></li>
+                                    <li><a class="dropdown-item" href="/moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
-                                    <li><a class="dropdown-item" href="#">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="#">Чай</a></li>
-                                    <li><a class="dropdown-item" href="#">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="/syropi.html">Сиропи</a></li>
+                                    <li><a class="dropdown-item" href="/chay.html">Чай</a></li>
+                                    <li><a class="dropdown-item" href="/stakany.html">Стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a class="btn text-nowrap" role="button" href="#">КОНТАКТИ</a>
+                        <a class="btn text-nowrap" role="button" href="/contacty.html">КОНТАКТИ</a>
                     </li>
                 </ul>
             </div>
